--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      AppFlow POC - Tab 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container [name]="'AppFlow POC: version 0'"></app-explore-container>
 </ion-content>
