--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container [name]="'AppFlow POC: version 0'"></app-explore-container>
+  <app-explore-container [name]="'AppFlow POC: release 1.0 version 0'"></app-explore-container>
 </ion-content>
