--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      AppFlow POC - Tab 1
-    </ion-title>
+    <ion-title> AppFlow POC - Tab 1 </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,5 +11,16 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container [name]="'AppFlow POC: release 1.0 version 0'"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">AppFlow Versons</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <div class="ion-text-center ion-padding">
+        <h2>Native Version: <span>1.0.0</span></h2>
+        <h2>Web Version: <span>1.0.0</span></h2>
+      </div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
