add buttons and logic for app update reloading when session does not exist

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,4 +23,23 @@
       </div>
     </ion-card-content>
   </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title class="ion-text-center">
+        {{ sessionExists ? 'Session Active' : 'Session Expired'}}
+      </ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <div class="ion-text-center">
+        <app-countdown-timer
+          (timerCompleted)="expireSession()"
+          (timerStarted)="initializeSession()"
+          [clearTimerText]="'Maintain Session Active/Expired'"
+          [startTimerText]="'Start Session and Session Timeout'"
+        ></app-countdown-timer>
+      </div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
