web minor update (base)

--- a/src/app/countdown-timer/countdown-timer.component.scss
+++ b/src/app/countdown-timer/countdown-timer.component.scss
@@ -4,22 +4,21 @@ div {
   font-family: Arial, sans-serif;
 
   h1 {
-    color: #d5d5d5;
     font-weight: 800;
   }
 
   p {
     font-size: 24px;
-    color: #ffffff;
     margin-bottom: 20px;
   }
 
   button {
     background-color: #4caf50;
     color: white;
+    font-weight: 800;
     padding: 10px 20px;
     font-size: 16px;
-    margin: 0 10px;
+    margin: 10px 10px;
     cursor: pointer;
     border: none;
     border-radius: 4px;
